--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WebGL demo</title>
+  <link rel="stylesheet" href="webgl-demo.css">
+  <script src="https://unpkg.com/gl-matrix@3.4.3/gl-matrix.js" defer></script>
   <script src="webgl-demo.js" type="module" defer></script>
 </head>
 <body>
