--- a/eye/index.html
+++ b/eye/index.html
@@ -7,8 +7,7 @@
   <title>👁️</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/gl-matrix@3.4.3/gl-matrix.js" defer></script>
-  <script src="index.js" type="module" defer></script>
+  <script src="index.ts" type="module" defer></script>
 </head>
 <body>
   <canvas id="canvas" width="800" height="600"></canvas>
