--- a/eye/index.html
+++ b/eye/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -10,6 +11,9 @@
   <script src="index.ts" type="module" defer></script>
 </head>
 <body>
-  <canvas id="canvas" width="800" height="600"></canvas>
+  <div class="content">
+    <canvas id="canvas" width="800" height="600"></canvas>
+    <input id="rotation" type="range" min="0" max="360" value="0">
+  </div>
 </body>
 </html>
